--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         pip install -r requirements.txt
     - name: Train model
       run: |
-        python src/train.py
+        python src/train_model.py
     - name: Upload model artifacts
       uses: actions/upload-artifact@v2
       with:
