--- a/.github/workflows/loan-api.yml
+++ b/.github/workflows/loan-api.yml
@@ -48,6 +48,10 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_SSH_KEY }}
         script: |
+          # Create project directory if not exists
+          mkdir -p /home/ubuntu/loan_scoring
+          cd /home/ubuntu/loan_scoring
+          
           # Clean up old containers and images
           docker system prune -af --volumes
           
